# modern-python-template

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
jupyter/: tests.ipynb
jupyter/.ipynb_checkpoints/: tests-checkpoint.ipynb
lib/: fibonacci.py  numpy_example.py
src/: __main__.py
tests/: test_fibonacci.py
