[project]
name = "python-lib"
version = "0.1.0"
description = "A python library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "numpy>=2.1.2",
    "pre-commit>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.15.0",
    "pytest>=8.3.3",
]

[tool.uv.pip]
# Set generate-hashes for uv
generate-hashes = true
